# CppRAG

./: .dockerignore  .gitignore  Dockerfile  README.md  compile_commands  docker-compose.yml  includes.txt  pyproject.toml  pytest.ini  rag_cli.py  rag_core.cpp  run_eval.py  server.py  setup.py  tailwind.config.js
datasets/: new_dataset.json
docs/: ARCHITECTURE.md  CONFIG.md  DATASET.md  EVALUATION.md  INDEX.md  TROUBLESHOOTING.md  USAGE.md
eval_results/: latest.json
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts
frontend/src/components/: ChatArea.tsx  ChunkVisualizer.tsx  SystemDashboard.tsx
frontend/src/types/: index.ts
rag/: __init__.py  batch_sizer.py  chunker.py  chunking.py  config.py  embedders.py  errors.py  index.py  ingestion_state.py  interfaces.py  llm.py  logging_utils.py  models.py  rag.py  rerankers.py  vector_store.py  visualize.py
src/: App.tsx  store.ts
src/components/: ChatArea.tsx  ChunkVisualizer.tsx
tests/: test_batch_sizer.py  test_chunker.py  test_chunking.py  test_index.py  test_ingestion_state.py  test_integration_rag.py  test_rag.py  test_vector_store.py
tests/fixtures/index_filter/: b.md
tests/fixtures/index_query/: plan.txt  recipe.txt
tests/fixtures/rag_prompt/: notes.txt
